# midnite-archive

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  PRE_COMMIT_HOOKS.md  README.md  justfile  mise.toml  test.sh  troubleshooting.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  youtube-channel-list.yml
channels/: README.md  youtube-channels.json  youtube-channels.txt
cli/: README.md
docs/: cli-ux.md  processing-comments.md  requirements.md  tmux.md  troubleshooting.md  yt-dlp-integration.md
poc/: BASELINE.md  README.md  RESULTS.md  poc.just
poc/boul2gom/: Cargo.toml
poc/boul2gom/src/: main.rs
poc/ytd-rs/: Cargo.toml
poc/ytd-rs/src/: main.rs
scripts/: README.md  channel_list_download.sh  channel_list_gen.sh  download_from_list.sh  generate_archive.sh
scripts/legacy/video/: rename.py
scripts/legacy/yt/: channel_list_generate.sh
scripts/video/: rename.py  rename.sh  special_rename.sh
scripts/yt/: channel_list_download.sh  channel_list_generate.sh  download_video.sh  download_video_comments.sh
src/: cli.rs  lib.rs  main.rs  types.rs  yt_dlp.rs
src/cli/: comments.rs  download.rs  generate.rs  mod.rs  rename.rs
src/commands/: comments.rs  download.rs  generate.rs  mod.rs  rename.rs
