[package]
name = "midnite-archive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
regex = "1.12.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
which = "8.0"
